<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="joda_time_android_date_time">%1$s, %2$s</string>
    <string name="joda_time_android_preposition_for_date">on %s</string>
    <string name="joda_time_android_preposition_for_time">at %s</string>
    <string name="joda_time_android_relative_time">%1$s, %2$s</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_media_route_controller_no_info_available">No info available</string>
    <string name="mr_media_route_controller_pause">Pause</string>
    <string name="mr_media_route_controller_play">Play</string>
    <string name="mr_media_route_controller_settings_description">Route settings</string>
    <string name="mr_media_route_controller_stop">Stop casting</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="about_goodrx">About GoodRx</string>
    <string name="about_goodrx_price">About GoodRx Prices</string>
    <string name="about_goodrx_price_content_p1">"GoodRx's cash prices are based on multiple sources, including published price lists, purchases, claims records, and data provided by pharmacies. Our discount and coupon prices are based on contracts between a pharmacy (or pharmacy purchasing group) and a Pharmacy Benefit Manager (PBM), who provides prices to us."</string>
    <string name="about_goodrx_price_content_p2">The prices we show are our best estimate; while we believe our data to be generally accurate, we cannot guarantee that the price we display will exactly match the price you receive at the pharmacy. For an exact price, please contact the pharmacy.</string>
    <string name="about_goodrx_price_content_p3">Please keep in mind that the pharmacy will require the information shown on the GoodRx coupon/discount to confirm the discount price.</string>
    <string name="about_x">About %s</string>
    <string name="accept">Accept</string>
    <string name="account">Account</string>
    <string name="action_clicked">Clicked</string>
    <string name="action_coupon_share">Shared</string>
    <string name="action_coupon_viewd">Coupon Viewed</string>
    <string name="action_settings">Settings</string>
    <string name="add_a_photo_of_your_prescription">Add a Photo of Your Prescription</string>
    <string name="add_a_prescription">Add a Prescription</string>
    <string name="add_drug_to_my_rx">Add a drug to My Rx</string>
    <string name="add_rx_description_p1">Enter a drug name in the search above.</string>
    <string name="add_rx_description_p2">Adding a drug to My Rx provides you with price alerts, savings tips and notifications.</string>
    <string name="add_rx_error">Add Rx Error</string>
    <string name="add_rx_error_description">Unable to add your prescription. Please try again later.</string>
    <string name="add_successful_description">"&lt;b>%s&lt;/b> has been added to My Rx. We'll send you refill reminders and price alerts."</string>
    <string name="add_successful_title">Added to My Rx</string>
    <string name="add_to_my_rx">Add To My Rx</string>
    <string name="add_to_my_rx_plus">+ ADD TO MY RX</string>
    <string name="added_to_my_rx">ADDED TO MY RX</string>
    <string name="addrx_dialog_p1">"With MyRx, you'll receive:"</string>
    <string name="addrx_dialog_p2">Price alerts</string>
    <string name="addrx_dialog_p3">Refill reminders</string>
    <string name="addrx_dialog_p4">Easy access to your prescriptions</string>
    <string name="addrx_dialog_title">Add to MyRx?</string>
    <string name="adid_error">ADID Error</string>
    <string name="adid_error_description">Can not get ADID.</string>
    <string name="all_drugs">All Drugs</string>
    <string name="amazon">Amazon.com offers competitive pricing for over-the-counter medications.</string>
    <string name="any_color">Any Color</string>
    <string name="any_shape">Any Shape</string>
    <string name="app_disabled">GoodRx is disabled</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="coupon_howto_p1">Present the coupon to the pharmacist when filling or refilling your prescription. Once you use a coupon, it will remain on file at your pharmacy and can be used for any medication you fill or refill there.</string>
    <string name="coupon_howto_p2">"Some pharmacists may not be aware that they are contractually obligated to honor GoodRx coupons. Start by calling the phone number on the coupon, and if that doesn't resolve the issue, contact us at "<a href="mailto:info@goodrx.com">info@goodrx.com</a>.</string>
    <string name="coupon_howto_p3">This discount can be used by any member of your family and will work at other pharmacies, though your price may vary.</string>
    <string name="coupon_howto_p4">This is not insurance. Cannot be used in conjunction with Medicare or Medicaid.</string>
    <string name="current_pharmacy">Current Pharmacy</string>
    <string name="delete_prescription">Delete Prescription</string>
    <string name="dosage">Dosage</string>
    <string name="drug">Drug</string>
    <string name="form">Form</string>
    <string name="help_and_faqs">Help and FAQs</string>
    <string name="how_to_use_this_coupon">How to use this coupon</string>
    <string name="info">Info</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_rx_p1">Ready to start saving?</string>
    <string name="no_rx_p2">Tap the magnifying glass in the upper right corner to search current prescription prices.</string>
    <string name="no_rx_p3">Add your prescriptions to My Rx to get savings alerts and more.</string>
    <string name="offline_description">It looks like your phone is offline. Please turn off airplane mode or enabling wi-fi and try again.</string>
    <string name="photo_intro_p1">Import a prescription with your camera</string>
    <string name="photo_intro_p2">"Capture your prescription's details by taking photos of your pill bottle or medication packaging."</string>
    <string name="photo_intro_p3">GoodRx will transcribe the photos into a prescription in My Rx.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="quantity">Quantity</string>
    <string name="star">★</string>
    <string name="start_taking_photos">Start taking photos</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="to_save_on_your_prescription">To save on your prescription medication</string>
    <string name="try_again">Try Again</string>
</resources>