<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/rxedit_root" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingBottom="80.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.goodrx.widget.MyRx.RxEditOption android:id="@id/rxoption_drug" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:text1="@string/drug" />
            <include layout="@layout/divider" />
            <com.goodrx.widget.MyRx.RxEditOption android:id="@id/rxoption_form" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:text1="@string/form" />
            <include layout="@layout/divider" />
            <com.goodrx.widget.MyRx.RxEditOption android:id="@id/rxoption_dosage" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:text1="@string/dosage" />
            <include layout="@layout/divider" />
            <com.goodrx.widget.MyRx.RxEditOption android:id="@id/rxoption_quantity" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:text1="@string/quantity" />
            <include layout="@layout/divider" />
            <com.goodrx.widget.MyRx.RxEditImage android:id="@id/rxoption_image" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <include layout="@layout/divider" />
            <com.goodrx.widget.MyRx.RxEditOption android:id="@id/rxoption_pharmacy" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:text1="@string/current_pharmacy" />
            <include layout="@layout/divider" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layout_rxedit_delete" android:background="?selectableItemBackground" android:paddingTop="@dimen/list_item_vertical_padding" android:paddingBottom="@dimen/list_item_vertical_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding_2x" android:layout_marginBottom="@dimen/list_item_vertical_padding_2x">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/list_item_horizental_padding_half" android:src="@drawable/ic_delete" android:tint="@color/red" />
                <TextView android:textSize="@dimen/text_size_large" android:textColor="@color/red" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delete_prescription" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button android:textColor="@android:color/white" android:layout_gravity="bottom" android:id="@id/button_rxedit_add" android:background="@drawable/clickable_background_blue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/list_item_horizental_padding" android:minHeight="@dimen/large_button_min_height" android:text="@string/add_to_my_rx" android:onClick="onAddRxClicked" android:alpha="0.9" />
    <include layout="@layout/busyoverlay" />
</FrameLayout>