<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/coupon_back_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:background="@android:color/white" android:paddingBottom="@dimen/list_item_vertical_padding" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/gray_drug_price_header" android:paddingLeft="@dimen/list_item_horizental_padding" android:paddingTop="@dimen/list_item_vertical_padding" android:paddingBottom="@dimen/list_item_vertical_padding_1_5x" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_help" android:tint="@color/gray_text_darker" />
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_item_horizental_padding">
                    <TextView android:textSize="@dimen/text_size_dialog_title" android:textColor="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/how_to_use_this_coupon" />
                    <TextView android:textColor="@color/gray_text_darker" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/to_save_on_your_prescription" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/list_item_horizental_padding_2x" android:paddingRight="@dimen/list_item_horizental_padding_2x" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding" android:text="@string/coupon_howto_p1" />
                <TextView android:autoLink="email" android:id="@id/textivew_couponhowto_p2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding" android:text="@string/coupon_howto_p2" />
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding" android:text="@string/coupon_howto_p3" />
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding" android:text="@string/coupon_howto_p4" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>