<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/list_item_horizental_padding" android:layout_marginRight="@dimen/list_item_horizental_padding"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_size_large" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/photo_intro_p1" />
    <TextView android:textColor="@android:color/white" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding_2x" android:text="@string/photo_intro_p2" />
    <TextView android:textColor="@android:color/white" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding_2x" android:text="@string/photo_intro_p3" />
    <Button android:textColor="@android:color/white" android:id="@id/button" android:background="@drawable/clickable_background_blue" android:paddingLeft="30.0dip" android:paddingTop="@dimen/list_item_vertical_padding" android:paddingRight="20.0dip" android:paddingBottom="@dimen/list_item_vertical_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_item_horizental_padding_1_5x" android:layout_marginTop="40.0dip" android:layout_marginRight="@dimen/list_item_horizental_padding_1_5x" android:text="@string/start_taking_photos" android:drawableLeft="@drawable/ic_camera_clear" android:onClick="onButtonClicked" />
</LinearLayout>