<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/light_gray" android:paddingLeft="@dimen/list_item_horizental_padding" android:paddingRight="@dimen/list_item_horizental_padding" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_no_connection" />
    <TextView android:textSize="@dimen/text_size_title" android:textColor="@color/gray_text_subtitle" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding_2x" android:text="@string/no_internet_connection" />
    <TextView android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding_2x" android:text="@string/offline_description" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding_2x">
        <Button android:textColor="@android:color/white" android:id="@id/button_connectionError_tryAgain" android:background="@drawable/clickable_background_blue" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/try_again" />
        <ProgressBar android:layout_gravity="center" android:id="@id/progressBar_connectionError" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </FrameLayout>
</LinearLayout>