<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:id="@id/appbar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:elevation="@dimen/elevation_appbar">
        <android.support.v7.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:contentInsetStart="@dimen/content_start_padding" />
    </android.support.design.widget.AppBarLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/layout_myrx_empty" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/list_item_horizental_padding_2x" android:layout_marginTop="@dimen/list_item_vertical_padding_3x" android:layout_marginRight="@dimen/list_item_horizental_padding_2x" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_empty_bottle" />
        <TextView android:textSize="@dimen/text_size_extra_large" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding_2x" android:text="@string/no_rx_p1" />
        <TextView android:textSize="@dimen/text_size_large" android:textColor="@color/gray_text_subtitle" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding_3x" android:text="@string/no_rx_p2" />
        <TextView android:textSize="@dimen/text_size_large" android:textStyle="bold" android:textColor="@color/gray_text_darker" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_vertical_padding_2x" android:text="@string/no_rx_p3" />
    </LinearLayout>
    <com.goodrx.widget.MySwipeRefreshLayout android:id="@id/swiperefresh_myrx" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.v7.widget.RecyclerView android:id="@id/recyclerview_myrx" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </com.goodrx.widget.MySwipeRefreshLayout>
    <android.support.design.widget.FloatingActionButton android:layout_gravity="end|bottom|center" android:id="@id/floating_action_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/action_button_margin" android:src="@drawable/ic_add_white" app:elevation="@dimen/elevation_fab" app:layout_behavior="com.goodrx.utils.ScrollAwareFABBehavior" app:pressedTranslationZ="@dimen/elevation_fab_pressed" app:backgroundTint="@color/blue_button" />
    <View android:id="@id/view_block_myrx" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</android.support.design.widget.CoordinatorLayout>